examples/test/testpolicy11062.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11062
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key11: value3
      key43: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value7
          key10: value25
          key12: value21
      podSelector:
        matchLabels:
          key20: value11
          key38: value30
          key44: value8
